uaMenu.css
@import url('https://fonts.googleapis.com/css?family=Roboto');
	body {
		background-repeat: no-repeat;
		background-size: cover;
		background-attachment: fixed;
		background-position: center center;
	}
	.headRow {
		margin-bottom: 15px;
	}
	#photo-info {
	padding: 0px;
	width: auto;
	}
	#photo-info p {
		margin: 0px;
		background: rgba(249, 249, 249, 0.8)!important;
		border-radius: 5px;
		height: auto;
		padding: 10px;
	}
	.navbar{
		 border-top-left-radius: 0px;
		 border-top-right-radius: 0px;
		 border-color:#512D6D;
		 background-color:#512D6D !important;
		 width: 250px;
		 margin-bottom: 15px;
	}
	.nav li a {
		padding: 14px 13px !important;
		background-color:#512D6D !important;
		color:#EBE6F0 !important;
		font: 11pt "Roboto", Helvetica, Arial, sans-serif;
	}
	.nav li a:hover {
		color:#ffffff !important;;
	}
	
	
	.boxRow div {
		margin: 2px 0px;
	}
	.newRow {
		text-align: center;
		transition: opacity linear .4s 1s,height linear .4s 1s,padding linear .4s 1s;
		border-radius: 5px;
	}
	.newRow:hover {
		-webkit-transition: background-color linear .1s;
		-o-transition: background-color linear .1s;
		transition: background-color linear .1s;
		background-color: #e6e6e6;
		background-image: -webkit-linear-gradient(top,#fff 0,#e6e6e6 100%);
		background-image: -o-linear-gradient(top,#fff 0,#e6e6e6 100%);
		background-image: linear-gradient(to bottom,#fff 0,#a5a5a5 100%);
		background-repeat: repeat-x;
	}
	.newRow a {
		font-size: 40px;
		transition: background-color linear .1s;
		display: inline-block;
		text-shadow: 0 1px 1px #666;
		opacity: 1;
		color: #CCC;
		height: 40px;
		line-height: 40px;
		text-decoration: none;
	}

